--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,13 @@ body {
 
 h1 { font-size: 23px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 25.3px; } 
 
-h3 { font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 18.7px; } p { font-family: Helvetica; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } 
+h3 { font-size: 35px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 18.7px; } p { font-family: Helvetica; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } 
 
 h4 { font-size: 15px;}
 
-p, a { font-size: 12px; color: black;}
+h6 { font-size: 21px;}
+
+p, a { font-size: 26px; color: black; line-height: 45px}
 
 button { 
     font-family: sans-serif;
